--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 	<a href="#inicio">Inicio</a>
-	<a href="#canalesycolores">Configuración de canales y colores</a>
+	<a href="canalesycolores">Configuración de canales y colores</a>
 	<center>
 	 <h1>Servidor Reino Choripán 2</h1>
 	<img src="https://cdn.discordapp.com/attachments/913944164935299112/932446567422631956/LOGO_DEL_SERVER_5.png" height="300" width="300">
@@ -28,6 +28,7 @@
 		En el servidor hay un canal para poder configurar los canales que querés ver, el color de tu nombre y las notificaciones.
 	</p>
 	<img src="https://cdn.discordapp.com/attachments/913944164935299112/932691214514409493/Verificar_1.png" height="300" width="320">
+	<h5> Última actualización: 17 de enero a las 19:33</h5>
 	</center>
 </body>
 </html>
