Added new files

--- a/index.html
+++ b/index.html
@@ -2,33 +2,50 @@
 <html>
 <head>
 	<meta charset="utf-8">
+	<meta name="robots" content="noindex">
 	<title>Reino Choripán 2</title>
-	<link rel="icon" type="LOGODELSERVER 5" href="">
+	<link rel="icon" type="LOGODELSERVER 5.ico" href="">
 </head>
 <body>
-	<a href="#inicio">Inicio</a>
-	<a href="#canalesycolores">Configuración de canales y colores</a>
+	<header>
+		<nav>
+				<h3><li><a href="index.html">Inicio</a></li></h3>
+				<h3><li><a href="noticias.html">Noticias</a></li></h3>
+				<h3><li><a href="Progresodelservidor.html">Progreso de la página</a></li></h3>
+		</nav>
+	</header>
+	<h3><li><a href="#canalesycolores">Configuración de canales y colores</a></li></h3>
+	<h3><li><a href="#cartas">Conseguí cartas</a></li></h3>
 	<center>
-	 <h1>Servidor Reino Choripán 2</h1>
-	<img src="https://cdn.discordapp.com/attachments/913944164935299112/932446567422631956/LOGO_DEL_SERVER_5.png" height="300" width="300">
-<p>
-		Bienvenido a la página de Reino Choripán 2. Esta página está en desarrollo. Mientras vaya aprendiendo a como hacerla, voy a ir actualizandola.
-	</p>
-	<h2 id= "¿Queesreinochoripan2">¿Que es Reino Choripán 2?</h2>
-	<p>
-		Reino Choripán 2 es un servidor que hicimos y donde se pueden hacer muchas cosas, desde simplemente conectarse y hablar por un canal de voz hasta conseguir dinero de la propia moneda del servidor.
-	</p>
-	<h3>Consigue experiencia</h3>
-	<p>
-		Consigue experiencia conectandote a un canal de voz o quedandote AFK en el canal con dicho nombre.
-	</p>
-	<img src="https://cdn.discordapp.com/attachments/913944164935299112/932689490147958844/unknown.png" height="300" width="320">
-	<h4 id="canalesycolores">Configurá los canales y colores</h4>
-	<p>
-		En el servidor hay un canal para poder configurar los canales que querés ver, el color de tu nombre y las notificaciones.
-	</p>
-	<img src="https://cdn.discordapp.com/attachments/913944164935299112/932691214514409493/Verificar_1.png" height="300" width="320">
-	<h5> Última actualización: 17 de enero a las 19:37</h5>
+	 	<h1>Página web de Reino Choripán 2</h1>
+		<img src="https://cdn.discordapp.com/attachments/913944164935299112/932446567422631956/LOGO_DEL_SERVER_5.png" height="500" width="550" alt="Reino Choripán 2" title="Logo del servidor">
+		<p style="font-size: x-large;">
+			Bienvenido a la página de Reino Choripán 2. Esta página está en desarrollo. Mientras vaya aprendiendo a como hacerla, voy a ir actualizandola.
+		</p>
+		<h2 id= "¿Quéesreinochoripan2">¿Que es Reino Choripán 2?</h2>
+		<p style="font-size: x-large;">
+			Reino Choripán 2 es un servidor que hicimos y donde se pueden hacer muchas cosas, desde simplemente conectarse y <br> hablar por un canal de voz hasta conseguir dinero de la propia moneda del servidor
+		</p>
+		<h2>Consigue experiencia</h2>
+		<p style="font-size: x-large;">
+			Consigue experiencia conectandote a un canal de voz o quedandote AFK en el canal con dicho nombre
+		</p>
+		<img src="https://cdn.discordapp.com/attachments/913944164935299112/932689490147958844/unknown.png" height="500" width="550" alt="Experiencia" title="Experiencia al conectarse a un canal de voz">
+		<h2 id="canalesycolores">Configurá los canales y colores</h2>
+		<p style="font-size: x-large;">
+			En el servidor hay un canal para poder configurar los canales que querés ver, el color de tu nombre y las notificaciones.
+		</p>
+		<img src="https://cdn.discordapp.com/attachments/913944164935299112/932691214514409493/Verificar_1.png" height="500" width="550" alt="Configuración" title="Configuración del usuario en el servidor">
+		<h2 id="cartas">Conseguí cartas de gran valor</h2><br>
+		<p style="font-size: x-large;">
+			Consegui cartas usando al bot Mudae y comparalas con los demás miembros del servidor
+		</p>
+		<img src="https://cdn.discordapp.com/attachments/913944164935299112/932772288418447381/Verificar_3.png" height="500" width="550" alt="Cartas" title="Cartas del bot Mudae">
+		<h2> Última actualización de la página: 17 de enero a las 22:12</h2>
+		<footer>
+			<h1>Unite al servidor</h1>
+			<h1><a href="https://discord.gg/W4hGMfQ5SX">Haz click acá</a></h1>
+		</footer>
 	</center>
 </body>
 </html>
