--- a/index.html
+++ b/index.html
@@ -5,47 +5,89 @@
 	<meta name="robots" content="noindex">
 	<title>Reino Choripán 2</title>
 	<link rel="icon" type="LOGODELSERVER 5.ico" href="">
+	<link rel="stylesheet" type="text/css" href="Diseño2.css">
+	<link rel="stylesheet" type="text/css" href="normalize.css">
 </head>
 <body>
-	<header>
-		<nav>
-				<h3><li><a href="index.html">Inicio</a></li></h3>
-				<h3><li><a href="noticias.html">Noticias</a></li></h3>
-				<h3><li><a href="Progresodelservidor.html">Progreso de la página</a></li></h3>
-		</nav>
-	</header>
-	<h3><li><a href="#canalesycolores">Configuración de canales y colores</a></li></h3>
-	<h3><li><a href="#cartas">Conseguí cartas</a></li></h3>
-	<center>
-	 	<h1>Página web de Reino Choripán 2</h1>
-		<img src="https://cdn.discordapp.com/attachments/913944164935299112/932446567422631956/LOGO_DEL_SERVER_5.png" height="500" width="550" alt="Reino Choripán 2" title="Logo del servidor">
-		<p style="font-size: x-large;">
-			Bienvenido a la página de Reino Choripán 2. Esta página está en desarrollo. Mientras vaya aprendiendo a como hacerla, voy a ir actualizandola.
-		</p>
-		<h2 id= "¿Quéesreinochoripan2">¿Que es Reino Choripán 2?</h2>
-		<p style="font-size: x-large;">
-			Reino Choripán 2 es un servidor que hicimos y donde se pueden hacer muchas cosas, desde simplemente conectarse y <br> hablar por un canal de voz hasta conseguir dinero de la propia moneda del servidor
-		</p>
-		<h2>Consigue experiencia</h2>
-		<p style="font-size: x-large;">
-			Consigue experiencia conectandote a un canal de voz o quedandote AFK en el canal con dicho nombre
-		</p>
-		<img src="https://cdn.discordapp.com/attachments/913944164935299112/932689490147958844/unknown.png" height="500" width="550" alt="Experiencia" title="Experiencia al conectarse a un canal de voz">
-		<h2 id="canalesycolores">Configurá los canales y colores</h2>
-		<p style="font-size: x-large;">
-			En el servidor hay un canal para poder configurar los canales que querés ver, el color de tu nombre y las notificaciones.
-		</p>
-		<img src="https://cdn.discordapp.com/attachments/913944164935299112/932691214514409493/Verificar_1.png" height="500" width="550" alt="Configuración" title="Configuración del usuario en el servidor">
-		<h2 id="cartas">Conseguí cartas de gran valor</h2><br>
-		<p style="font-size: x-large;">
-			Consegui cartas usando al bot Mudae y comparalas con los demás miembros del servidor
-		</p>
-		<img src="https://cdn.discordapp.com/attachments/913944164935299112/932772288418447381/Verificar_3.png" height="500" width="550" alt="Cartas" title="Cartas del bot Mudae">
-		<h2> Última actualización de la página: 17 de enero a las 22:12</h2>
-		<footer>
-			<h1>Unite al servidor</h1>
-			<h1><a href="https://discord.gg/W4hGMfQ5SX">Haz click acá</a></h1>
-		</footer>
-	</center>
+	<div class="contenedor-texto">
+		<h1 class= "contenedor-texto__h1">Prueba de página web</h1>
+		<p class="contenedor-texto__p">
+		Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+		tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+		quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+		consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+		cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+		proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+		Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+		tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+		quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+		consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+		cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+		proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+
+	Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+		tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+		quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+		consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+		cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+		proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+		Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+		tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+		quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+		consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+		cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+		proident, sunt in culpa qui officia deserunt mollit anim id est laborum.Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+		tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+		quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+		consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+		cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+		proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+		Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+		tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+		quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+		consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+		cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+		proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+	</p>	
+	<h2 class="contenedor-texto__h2">Segundo título</h2>
+	<p class="contenedor-texto__p">
+		Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+		tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+		quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+		consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+		cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+		proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+		Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+		tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+		quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+		consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+		cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+		proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+
+	Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+		tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+		quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+		consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+		cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+		proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+		Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+		tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+		quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+		consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+		cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+		proident, sunt in culpa qui officia deserunt mollit anim id est laborum.Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+		tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+		quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+		consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+		cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+		proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+		Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+		tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+		quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+		consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+		cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+		proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+	</p>
+</div>
 </body>
 </html>
