Added new files

--- a/index.html
+++ b/index.html
@@ -5,89 +5,39 @@
 	<meta name="robots" content="noindex">
 	<title>Reino Choripán 2</title>
 	<link rel="icon" type="LOGODELSERVER 5.ico" href="">
-	<link rel="stylesheet" type="text/css" href="Diseño2.css">
+	<link rel="stylesheet" type="text/css" href="Diseño.css">
 	<link rel="stylesheet" type="text/css" href="normalize.css">
 </head>
 <body>
-	<div class="contenedor-texto">
-		<h1 class= "contenedor-texto__h1">Prueba de página web</h1>
-		<p class="contenedor-texto__p">
-		Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-		tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-		quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-		consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-		cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-		proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-		Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-		tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-		quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-		consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-		cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-		proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-
-	Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-		tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-		quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-		consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-		cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-		proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-		Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-		tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-		quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-		consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-		cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-		proident, sunt in culpa qui officia deserunt mollit anim id est laborum.Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-		tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-		quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-		consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-		cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-		proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-		Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-		tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-		quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-		consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-		cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-		proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-	</p>	
-	<h2 class="contenedor-texto__h2">Segundo título</h2>
-	<p class="contenedor-texto__p">
-		Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-		tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-		quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-		consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-		cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-		proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-		Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-		tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-		quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-		consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-		cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-		proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-
-	Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-		tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-		quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-		consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-		cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-		proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-		Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-		tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-		quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-		consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-		cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-		proident, sunt in culpa qui officia deserunt mollit anim id est laborum.Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-		tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-		quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-		consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-		cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-		proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-		Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-		tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-		quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-		consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-		cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-		proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-	</p>
-</div>
+	<h1 class="barra"></h1>
+	<h1 class="barra2"></h1>
+	<header>
+		<nav>
+			<h9><a href="index.html">Inicio</a></h9>
+			<h10><a href="noticias.html">Noticias</a></h10>
+			<h11><a href="Progresodelservidor.html">Progreso de la página</a></h11>
+		</nav>
+	</header>
+	<img src="https://cdn.discordapp.com/attachments/913944164935299112/932446567422631956/LOGO_DEL_SERVER_5.png" height="100" width="100" alt="Reino Choripán 2" title="Logo del servidor" class="contenedorimagen__1">
+<center>
+	<div class="contenedortexto">
+		<h1 class="contenedortexto__h1">Página web de Reino Choripán</h1>
+		<p class="contenedortexto__p">Bienvenido a la página de Reino Choripán 2. Esta página está en desarrollo. <br>Mientras vaya aprendiendo a como hacerla, voy a ir actualizandola</p>
+		<h2 class="contenedortexto__h2">¿Qué es Reino Choripán 2?</h2>
+		<p2 class="contenedortexto__p2">En el servidor hay un canal para poder configurar los canales que querés ver, el color de tu nombre y las notificaciones.</p2>
+		<img src="https://cdn.discordapp.com/attachments/913944164935299112/932446567422631956/LOGO_DEL_SERVER_5.png" height="500" width="650" alt="Reino Choripán 2" title="Logo del servidor" class="contenedorimagen__2">
+		<h3 class="contenedortexto__h3">Configurá los canales y colores</h3>
+		<p3 class="contenedortexto__p3">Reino Choripán 2 es un servidor que hicimos y donde se pueden hacer muchas cosas, <br>desde simplemente conectarse y hablar por un canal de voz hasta conseguir dinero de la propia moneda del servidor</p3>
+		<img src="https://cdn.discordapp.com/attachments/913944164935299112/932691214514409493/Verificar_1.png" height="500" width="650" alt="Reino Choripán 2" title="Logo del servidor" class="contenedorimagen__3">
+		<h4 class="contenedortexto__h4">Sistema de niveles</h4>
+		<p4 class="contenedortexto__p4"> Conseguí experiencia conectandote a un canal de voz o quedandote AFK en el canal con dicho nombre</p4>
+		<img src="https://cdn.discordapp.com/attachments/834584521349136385/877002944900395049/Verificar_2.png" height="500" width="650" alt="Reino Choripán 2" title="Logo del servidor" class="contenedorimagen__4">
+		<h5 class="contenedortexto__h5">Obtené cartas</h5>
+		<p5 class="contenedortexto__p5"> Conseguí experiencia conectandote a un canal de voz o quedandote AFK en el canal con dicho nombre</p5>
+		<img src="https://cdn.discordapp.com/attachments/834584521349136385/877003373826678784/Verificar_3.png" height="500" width="650" alt="Reino Choripán 2" title="Logo del servidor" class="contenedorimagen__5">
+	</div>
+	</center>
+	<div class="contenedorimagen">
+	<img src="https://cdn.discordapp.com/attachments/913944164935299112/932446567422631956/LOGO_DEL_SERVER_5.png" height="100" width="100" alt="Reino Choripán 2" title="Logo del servidor" class="contenedorimagen__1">
 </body>
 </html>
