--- a/index.html
+++ b/index.html
@@ -3,39 +3,73 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="robots" content="noindex">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0"&amp;gt;>
 	<title>Reino Choripán 2</title>
 	<link rel="icon" type="LOGODELSERVER 5.ico" href="">
-	<link rel="stylesheet" type="text/css" href="Diseño.css">
+	<link rel="stylesheet" type="text/css" href="Diseño2.css">
 	<link rel="stylesheet" type="text/css" href="normalize.css">
 </head>
 <body>
-	<h1 class="barra"></h1>
-	<h1 class="barra2"></h1>
-	<header>
+	<div class="contenedor">
+		<h1 class="contenedor__h1"></h1>
+		<h1 class="contenedor__h2"></h1>
+		<header>
 		<nav>
-			<h9><a href="index.html">Inicio</a></h9>
-			<h10><a href="noticias.html">Noticias</a></h10>
+			<h1 class="contenedor__h12"><a href="index.html">Inicio</a></h1>
+			<h1 class="contenedor__h13"><a href="index.html">Noticias</a></h1>
 		</nav>
-	</header>
-	<img src="https://cdn.discordapp.com/attachments/913944164935299112/932446567422631956/LOGO_DEL_SERVER_5.png" alt="Reino Choripán 2" title="Logo del servidor" class="contenedorimagen__1">
-<center>
-	<div class="contenedortexto">
-		<h1 class="contenedortexto__h1">Página web de Reino Choripán</h1>
-		<p class="contenedortexto__p">Bienvenido a la página de Reino Choripán 2. Esta página está en desarrollo. <br>Mientras vaya aprendiendo a como hacerla, voy a ir actualizandola</p>
-		<h2 class="contenedortexto__h2">¿Qué es Reino Choripán 2?</h2>
-		<p2 class="contenedortexto__p2">En el servidor hay un canal para poder configurar los canales que querés ver, el color de tu nombre y las notificaciones.</p2>
-		<h3 class="contenedortexto__h3">Configurá los canales y colores</h3>
-		<p3 class="contenedortexto__p3">Reino Choripán 2 es un servidor que hicimos y donde se pueden hacer muchas cosas, <br>desde simplemente conectarse y hablar por un canal de voz hasta conseguir dinero de la propia moneda del servidor</p3>
-		<h4 class="contenedortexto__h4">Sistema de niveles</h4>
-		<p4 class="contenedortexto__p4"> Conseguí experiencia conectandote a un canal de voz o quedandote AFK en el canal con dicho nombre</p4>
-		<h5 class="contenedortexto__h5">Obtené cartas</h5>
-		<p5 class="contenedortexto__p5"> Conseguí experiencia conectandote a un canal de voz o quedandote AFK en el canal con dicho nombre</p5>
+		</header>
+		<center>
+		<img src="https://cdn.discordapp.com/attachments/913944164935299112/926199312185163796/LOGO_DEL_SERVER_5.png" class="contenedor__img7">
+		</center>
+		<h1 class="contenedor__h3">Página web de Reino Choripán 2</h1>
+		<p class="contenedor__p1">
+			Bienvenido a la página de Reino Choripán 2. Esta página está en desarrollo. <br>Mientras vaya aprendiendo a como hacerla, voy a ir actualizandola
+		</p>
+		<center>
+		<img src="https://cdn.discordapp.com/attachments/913944164935299112/926199312185163796/LOGO_DEL_SERVER_5.png" alt="Reino Choripán 2" title="Logo del servidor" class="contenedor__img1">
+		</center>
+		<h1 class="contenedor__h4">¿Qué es Reino Choripán?</h1>
+		<p class="contenedor__p2">
+			En el servidor hay un canal para poder configurar los canales que querés ver, el color de tu nombre y las notificaciones
+		</p>
+		<h1 class="contenedor__h5">Configurá los canales y tu color</h1>
+		<p class="contenedor__p3">
+			En el servidor hay un canal para poder configurar los canales que querés ver, el color de tu nombre y las notificaciones
+		</p>
+		<center>
+		<img src="https://cdn.discordapp.com/attachments/834584521349136385/877002509770706944/Verificar_1.png" alt="Reino Choripán 2" title="Logo del servidor" class="contenedor__img2">
+		</center>
+		<h1 class="contenedor__h6">Sistema de niveles</h1>
+		<p class="contenedor__p4">
+			Conseguí experiencia conectandote a un canal de voz o quedandote AFK en el canal con dicho nombre
+		</p>
+		<center>
+		<img src="https://cdn.discordapp.com/attachments/834584521349136385/877002944900395049/Verificar_2.png" class="contenedor__img3">
+		</center>
+		<h1 class="contenedor__h7">Obtené las cartas de tus personajes favoritos</h1>
+		<p class="contenedor__p5">
+			Conseguí experiencia conectandote a un canal de voz o quedandote AFK en el canal con dicho nombre
+		</p> 
+		<center>
+		<img src="https://cdn.discordapp.com/attachments/913944164935299112/932772288418447381/Verificar_3.png" class= contenedor__img4>
+		</center>
+		<h1 class="contenedor__h8">Escuchá la música que quieras</h1>
+		</center>
+		<p class="contenedor__p6">
+			Conseguí experiencia conectandote a un canal de voz o quedandote AFK en el canal con dicho nombre
+		</p>
+		<center>
+			<img src="https://cdn.discordapp.com/attachments/834584521349136385/877003683282452491/Verificar_4.png" class= contenedor__img5>
+		</center>
+		<h1 class="contenedor__h9">Desbloqueá roles exclusivos</h1>
+		<p class="contenedor__p7">
+			Conseguí experiencia conectandote a un canal de voz o quedandote AFK en el canal con dicho nombre
+		</p>
+		<center>
+			<img src="https://cdn.discordapp.com/attachments/913944164935299112/933117371487506472/Verificar_5.png" class= contenedor__img6>
+		</center>
+		<h1 class="contenedor__h10">Unite a nuestro discord</h1>
+		<h1 class="contenedor__h11"><a href="noticias.html">Click acá</a></h1>
 	</div>
-	<div class="contenedorimagen">
-		<img src="https://cdn.discordapp.com/attachments/913944164935299112/932446567422631956/LOGO_DEL_SERVER_5.png" alt="Reino Choripán 2" title="Logo del servidor" class="contenedorimagen__2" height="">
-	</div>
-	</center>
-	<div class="contenedorimagen">
 </body>
 </html>
