--- a/index.html
+++ b/index.html
@@ -19,7 +19,6 @@
 		</nav>
 		</header>
 		<center>
-		<img src="https://cdn.discordapp.com/attachments/913944164935299112/926199312185163796/LOGO_DEL_SERVER_5.png" class="contenedor__img7">
 		</center>
 		<h1 class="contenedor__h3">Página web de Reino Choripán 2</h1>
 		<p class="contenedor__p1">
@@ -37,21 +36,21 @@
 			En el servidor hay un canal para poder configurar los canales que querés ver, el color de tu nombre y las notificaciones
 		</p>
 		<center>
-		<img src="https://cdn.discordapp.com/attachments/834584521349136385/877002509770706944/Verificar_1.png" alt="Reino Choripán 2" title="Logo del servidor" class="contenedor__img2">
+		<img src="https://cdn.discordapp.com/attachments/834584521349136385/877002509770706944/Verificar_1.png" alt="Configuración" title="Configuración del usuario en el servidor" class="contenedor__img2" >
 		</center>
 		<h1 class="contenedor__h6">Sistema de niveles</h1>
 		<p class="contenedor__p4">
 			Conseguí experiencia conectandote a un canal de voz o quedandote AFK en el canal con dicho nombre
 		</p>
 		<center>
-		<img src="https://cdn.discordapp.com/attachments/834584521349136385/877002944900395049/Verificar_2.png" class="contenedor__img3">
+		<img src="https://cdn.discordapp.com/attachments/834584521349136385/877002944900395049/Verificar_2.png" alt="Experiencia" title="Experiencia al conectarse a un canal de voz" class="contenedor__img3">
 		</center>
 		<h1 class="contenedor__h7">Obtené las cartas de tus personajes favoritos</h1>
 		<p class="contenedor__p5">
 			Conseguí experiencia conectandote a un canal de voz o quedandote AFK en el canal con dicho nombre
 		</p> 
 		<center>
-		<img src="https://cdn.discordapp.com/attachments/913944164935299112/932772288418447381/Verificar_3.png" class= contenedor__img4>
+		<img src="https://cdn.discordapp.com/attachments/913944164935299112/932772288418447381/Verificar_3.png" alt="Cartas" title="Cartas del bot Mudae" class= contenedor__img4>
 		</center>
 		<h1 class="contenedor__h8">Escuchá la música que quieras</h1>
 		</center>
@@ -59,14 +58,14 @@
 			Conseguí experiencia conectandote a un canal de voz o quedandote AFK en el canal con dicho nombre
 		</p>
 		<center>
-			<img src="https://cdn.discordapp.com/attachments/834584521349136385/877003683282452491/Verificar_4.png" class= contenedor__img5>
+			<img src="https://cdn.discordapp.com/attachments/834584521349136385/877003683282452491/Verificar_4.png" alt="Música" title="Escuchá música" class= contenedor__img5>
 		</center>
 		<h1 class="contenedor__h9">Desbloqueá roles exclusivos</h1>
 		<p class="contenedor__p7">
 			Conseguí experiencia conectandote a un canal de voz o quedandote AFK en el canal con dicho nombre
 		</p>
 		<center>
-			<img src="https://cdn.discordapp.com/attachments/913944164935299112/933117371487506472/Verificar_5.png" class= contenedor__img6>
+			<img src="https://cdn.discordapp.com/attachments/913944164935299112/933117371487506472/Verificar_5.png" alt="Roles" title="Desbloqueá roles" class= contenedor__img6>
 		</center>
 		<h1 class="contenedor__h10">Unite a nuestro discord</h1>
 		<h1 class="contenedor__h11"><a href="noticias.html">Click acá</a></h1>
