Added new files

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 		<header>
 		<nav>
 			<h1 class="contenedor__h12"><a href="index.html">Inicio</a></h1>
-			<h1 class="contenedor__h13"><a href="index.html">Noticias</a></h1>
+			<h1 class="contenedor__h13"><a href="noticias.html">Noticias</a></h1>
 		</nav>
 		</header>
 		<center>
