Added new files

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 		</center>
 		<h1 class="contenedor__h3">Página web de Reino Choripán 2</h1>
 		<p class="contenedor__p1">
-			Bienvenido a la página de Reino Choripán 2. Esta página está en desarrollo. <br>Mientras vaya aprendiendo a como hacerla, voy a ir actualizandola
+			Bienvenido a la página de Reino Choripán 2. Esta página está en desarrollo. Mientras vaya aprendiendo a como hacerla, voy a ir actualizandola
 		</p>
 		<center>
 		<img src="https://cdn.discordapp.com/attachments/913944164935299112/926199312185163796/LOGO_DEL_SERVER_5.png" alt="Reino Choripán 2" title="Logo del servidor" class="contenedor__img1">
@@ -68,7 +68,7 @@
 			<img src="https://cdn.discordapp.com/attachments/913944164935299112/933117371487506472/Verificar_5.png" alt="Roles" title="Desbloqueá roles" class= contenedor__img6>
 		</center>
 		<h1 class="contenedor__h10">Unite a nuestro discord</h1>
-		<h1 class="contenedor__h11"><a href="noticias.html">Click acá</a></h1>
+		<h1 class="contenedor__h11"><a href="https://discord.gg/eJ46y25Q8k">Click acá</a></h1>
 	</div>
 </body>
 </html>
