Added new files

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 		</center>
 		<h1 class="contenedor__h7">Obtené las cartas de tus personajes favoritos</h1>
 		<p class="contenedor__p5">
-			Conseguí experiencia conectandote a un canal de voz o quedandote AFK en el canal con dicho nombre
+			 Consegui cartas usando al bot Mudae y comparalas con los demás miembros del servidor
 		</p> 
 		<center>
 		<img src="https://cdn.discordapp.com/attachments/913944164935299112/932772288418447381/Verificar_3.png" alt="Cartas" title="Cartas del bot Mudae" class= contenedor__img4>
@@ -55,14 +55,14 @@
 		<h1 class="contenedor__h8">Escuchá la música que quieras</h1>
 		</center>
 		<p class="contenedor__p6">
-			Conseguí experiencia conectandote a un canal de voz o quedandote AFK en el canal con dicho nombre
+			Escuchá tu música favorita en los canales de voz mediante dos bots de música
 		</p>
 		<center>
 			<img src="https://cdn.discordapp.com/attachments/834584521349136385/877003683282452491/Verificar_4.png" alt="Música" title="Escuchá música" class= contenedor__img5>
 		</center>
 		<h1 class="contenedor__h9">Desbloqueá roles exclusivos</h1>
 		<p class="contenedor__p7">
-			Conseguí experiencia conectandote a un canal de voz o quedandote AFK en el canal con dicho nombre
+			Conseguí roles exclusivos conseguiendo experiencia en los canales de voz y usando el bot de economía
 		</p>
 		<center>
 			<img src="https://cdn.discordapp.com/attachments/913944164935299112/933117371487506472/Verificar_5.png" alt="Roles" title="Desbloqueá roles" class= contenedor__img6>
