--- a/index.html
+++ b/index.html
@@ -3,34 +3,50 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Aprendiendo CSS</title>
-	<link rel="stylesheet" type="text/css" href="estilo.css">
-	<link rel="stylesheet" type="text/css" href="normalize.css">
+	<link rel="stylesheet" type="text/css" href="diseño.css">
 	<script src="https://kit.fontawesome.com/880db2c8e8.js" crossorigin="anonymous"></script>
+	<link rel="stylesheet" type="text/css" href="normalize.css">
+	<title>Página</title>
 </head>
 <body>
-<header>
-	<nav class="nav">
-		<ul class="nav__ul">
-			<li class="nav__li"><i class="fas fa-home"></i><a href="#">Inicio</a></li>
-			<li class="nav__li"><i class="fas fa-user-friends"></i><a href="#">Sobre nosotros</a></li>
-			<li class="nav__li"><i class="fas fa-dollar-sign"></i><a href="#">Gana dinero</a></li>
-			<li class="nav__li"><i class="fas fa-question-circle"></i><a href="#">Ayuda</a></li>
-		</ul>
-		<ul class="nav__responsive-ul">
-			<div class="nav__responsive-button-container">
-				<div class="nav__responsive-button fas fa-bars"></div>
-			</div>
-			<div class="nav__li-container">
-				<li class="nav__responsive-li"><i class="fas fa-home"></i><a href="#">Inicio</a></li>
-				<li class="nav__responsive-li"><i class="fas fa-user-friends"></i><a href="#">Sobre nosotros</a></li>
-				<li class="nav__responsive-li"><i class="fas fa-dollar-sign"></i><a href="#">Gana dinero</a></li>
-				<li class="nav__responsive-li"><i class="fas fa-question-circle"></i><a href="#">Ayuda</a></li>
-			</div>
-		</ul>
-	</nav>
-</header>
+		<header>
+			<nav class="nav">
+				<ul class="nav__ul">
+					<li class="nav__li"><i class="fas fa-home"></i><a href="#">Inicio</a></li>
+					<li class="nav__li"><i class="fas fa-bell"></i><a href="#">Noticias</a></li>
+					<li class="nav__li"><i class="fas fa-briefcase"></i><a href="#">Progreso del servidor</a></li>
+				</ul>
+			</nav>
+		</header>
+	<div class="container-presentación">
+			<h1 class="container-presentación__h1">Servidor de Reino Choripán 2</h1>
+			<p class="container-presentación__p">
+				Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod <br>
+				tempor incididunt ut labore et dolore magna aliqua. <br> Ut enim ad minim veniam,
+				quis nostrud exercitation ullamco laboris nisi ut <br> aliquip ex ea commodo
+				consequat. Duis aute irure dolor in reprehenderit in voluptate <br> velit esse
+				cillum dolore eu fugiat nulla pariatur.  Excepteur sint <br> ocaecat cupidatat non
+				proident, sunt in culpa qui officia <br> deserunt mollit anim id est laborum.
+			</p>
+			<img src="https://cdn.discordapp.com/attachments/918632507681964104/938430863111229450/LOGO_DEL_SERVER_5.png" class="container-presentación__img">
+	</div>
+	<div class="container-funciones">
+		<h1 class="container-funciones__h1">Cosas que podés hacer</h1>
+		<div class="container-funciones__galeria">
+			<h1 class="container-funciones-galeria__h1">Configurá tu perfil</h1>
+			<img src="https://cdn.discordapp.com/attachments/834584521349136385/877002509770706944/Verificar_1.png" class="container-funciones-galeria__img">
+		</div>
+		<div class="container-funciones__galeria2">
+			<h1 class="container-funciones-galeria2__h1">Conseguí experiencia</h1>
+			<img src="https://cdn.discordapp.com/attachments/834584521349136385/877002944900395049/Verificar_2.png" class="container-funciones-galeria2__img">
+		</div>
+		<div class="container-funciones__galeria3">
+			<h1 class="container-funciones-galeria3__h1">Conseguí experiencia</h1>
+			<img src="https://cdn.discordapp.com/attachments/834584521349136385/877002944900395049/Verificar_2.png" class="container-funciones-galeria3__img">
+		</div>
+		<div class="container-funciones__galeria4">
+			<h1 class="container-funciones-galeria4__h1">Conseguí experiencia</h1>
+			<img src="https://cdn.discordapp.com/attachments/834584521349136385/877002944900395049/Verificar_2.png" class="container-funciones-galeria4__img">
+		</div>
+	</div>
 </body>
-</html>
-
-
